--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "seneca": "^3.8.0-rc3"
   }
 }
